--- a/static/visual_main.css
+++ b/static/visual_main.css
@@ -16,11 +16,11 @@ body{
 }
 #modal_box{
 	padding: 10px;
-
+background-color: rgba(0,0,0,.5);
 }
 
 #form {
-    background-color: #FFF;
+    
     height: 600px;
     width: 600px;
     margin-right: auto;
@@ -28,13 +28,13 @@ body{
     margin-top: 0px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    padding: 0px;
+    padding: 10px;
     text-align:center;
 }
 label {
     font-family: Georgia, "Times New Roman", Times, serif;
     font-size: 18px;
-    color: #333;
+    color: white;
     height: 20px;
     width: 200px;
     margin-top: 10px;
@@ -46,11 +46,23 @@ label {
 }
 input {
     height: 20px;
+    line-height: 10px;
     width: 300px;
     border: 1px solid #000;
-    margin-top: 10px;
+    margin-top: 15px;
     float: left;
 }
 input[type=button] {
+    float:none;
+}
+select {
+    height: 20px;
+    line-height: 10px;
+    width: 300px;
+    border: 1px solid #000;
+    margin-top: 15px;
+    float: left;
+}
+select[type=button] {
     float:none;
 }
